[gd_scene load_steps=3 format=3 uid="uid://cnomcsihcgfmi"]

[ext_resource type="Script" path="res://ui/menu/controls_optionpanel.gd" id="1_shbqp"]
[ext_resource type="Script" path="res://ui/menu/axis_listener.gd" id="2_enhmo"]

[node name="Controls" type="PanelContainer"]
offset_right = 335.0
offset_bottom = 592.0
script = ExtResource("1_shbqp")

[node name="HSplit" type="HSplitContainer" parent="."]
layout_mode = 2
dragger_visibility = 1

[node name="Actions" type="ScrollContainer" parent="HSplit"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="InputActionUIParent" type="VBoxContainer" parent="HSplit/Actions"]
unique_name_in_owner = true
layout_mode = 2

[node name="General" type="VBoxContainer" parent="HSplit"]
layout_mode = 2

[node name="Devices" type="VBoxContainer" parent="HSplit/General"]
layout_mode = 2

[node name="Spacer" type="Control" parent="HSplit/General/Devices"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="DeviceSelector" type="OptionButton" parent="HSplit/General/Devices"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../DeviceOptionTabs")

[node name="Spacer2" type="Control" parent="HSplit/General/Devices"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="DeviceOptionTabs" type="TabContainer" parent="HSplit/General/Devices"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../DeviceSelector")
tab_alignment = 1

[node name="Is Flightstick" type="MarginContainer" parent="HSplit/General/Devices/DeviceOptionTabs"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="Grid" type="GridContainer" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 6
columns = 2

[node name="Yaw" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick/Grid"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Yaw"

[node name="YawAxis" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick/Grid" groups=["AxisListener"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "AXIS"
placeholder_text = "Actuate axis to replace"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "yaw"

[node name="Pitch" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick/Grid"]
layout_mode = 2
text = "Pitch"

[node name="PitchAxis" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick/Grid" groups=["AxisListener"]]
layout_mode = 2
text = "RIGHT_BLALA"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "pitch"

[node name="Roll" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick/Grid"]
layout_mode = 2
text = "Roll"

[node name="RollAxis" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick/Grid" groups=["AxisListener"]]
layout_mode = 2
text = "RIGHT_BLALA"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "roll"

[node name="Thrust" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick/Grid"]
layout_mode = 2
text = "Throttle"

[node name="ThrustAxis" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Flightstick/Grid" groups=["AxisListener"]]
layout_mode = 2
text = "RIGHT_BLALA"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "throttle"

[node name="Is Gamepad" type="MarginContainer" parent="HSplit/General/Devices/DeviceOptionTabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="Grid" type="GridContainer" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 6
columns = 2

[node name="Pitch" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Pitch"

[node name="PitchAxis" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid" groups=["AxisListener"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "RIGHT_BLALA"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "pitch"

[node name="Roll" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid"]
layout_mode = 2
text = "Roll"

[node name="RollAxis" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid" groups=["AxisListener"]]
layout_mode = 2
text = "RIGHT_BLALA"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "roll"

[node name="Thrust" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid"]
layout_mode = 2
text = "Throttle"

[node name="ThrustAxis" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid" groups=["AxisListener"]]
layout_mode = 2
text = "RIGHT_BLALA"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "throttle"

[node name="LeftPedalAxis" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid"]
layout_mode = 2
text = "Left Pedal"

[node name="LeftPedal" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid" groups=["AxisListener"]]
layout_mode = 2
text = "RIGHT_BLALA"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "l_pedal"

[node name="RightPedalAxis" type="Label" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid"]
layout_mode = 2
text = "Right Pedal"

[node name="RightPedal" type="LineEdit" parent="HSplit/General/Devices/DeviceOptionTabs/Is Gamepad/Grid" groups=["AxisListener"]]
layout_mode = 2
text = "RIGHT_BLALA"
editable = false
expand_to_text_length = true
context_menu_enabled = false
script = ExtResource("2_enhmo")
axis_id = "r_pedal"

[node name="Other" type="ScrollContainer" parent="HSplit/General"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="V" type="VBoxContainer" parent="HSplit/General/Other"]
layout_mode = 2

[node name="MouseAim" type="CheckBox" parent="HSplit/General/Other/V"]
layout_mode = 2
text = "Allow mouse aim"

[node name="H" type="HBoxContainer" parent="HSplit/General"]
layout_mode = 2
size_flags_vertical = 10

[node name="Margin" type="MarginContainer" parent="HSplit/General/H"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Save" type="Button" parent="HSplit/General/H/Margin"]
layout_mode = 2
text = "Save"

[connection signal="item_selected" from="HSplit/General/Devices/DeviceSelector" to="." method="_on_selected_device_changed"]
[connection signal="toggled" from="HSplit/General/Other/V/MouseAim" to="." method="_on_mouseaim_toggled"]
[connection signal="pressed" from="HSplit/General/H/Margin/Save" to="." method="_on_save"]
